testdata/baselines/reference/submodule/conformance/symbolProperty24.errors.txt
symbolProperty24.ts(5,7): error TS2420: Class 'C' incorrectly implements interface 'I'.
  The types returned by '[Symbol.toPrimitive]()' are incompatible between these types.
    Type 'string' is not assignable to type 'boolean'.


==== symbolProperty24.ts (1 errors) ====
    interface I {
        [Symbol.toPrimitive]: () => boolean;
    }
    
    class C implements I {
          ~
!!! error TS2420: Class 'C' incorrectly implements interface 'I'.
!!! error TS2420:   The types returned by '[Symbol.toPrimitive]()' are incompatible between these types.
!!! error TS2420:     Type 'string' is not assignable to type 'boolean'.
        [Symbol.toPrimitive]() {
            return "";
        }
    }